--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<meta property="og:description" content="Noticias y precios de Bitcoin hoy, cripto, blockchain, web 3.0 y CBDCs" />
 	<meta property="og:url" content="https://www.diariobitcoin.com/" />
 	<meta property="og:site_name" content="DiarioBitcoin" />
+	<meta property="og:image" content="https://gateway.pinata.cloud/ipfs/QmSGmLf6yBVRu2QouPmqNMxFxPgAVCQS98QyyQJQ2oDuwq?_gl=1*hcp2pg*rs_ga*NTgzMzM3YTMtOWRiMS00MjJmLTgyOGItODNiMzI4NGEzZmQw*rs_ga_5RMPXG14TE*MTY4MTM5OTMzNS4xLjEuMTY4MTM5OTU0OC4zNS4wLjA.">
 	<meta name="twitter:card" content="summary_large_image" />
 	<!-- / Yoast SEO plugin. -->
 
